# anguilla

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
docs/: index.md
reference/anguilla/__init__/: index.html
reference/anguilla/__version__/: index.html
reference/anguilla/app/__init__/: index.html
reference/anguilla/app/server/: index.html
reference/anguilla/embed/: index.html
reference/anguilla/interpolate/: index.html
reference/anguilla/nnsearch/: index.html
reference/anguilla/serialize/: index.html
reference/anguilla/types/: index.html
search/: search_index.json
src/anguilla/: __init__.py  __main__.py  __version__.py  embed.py  interpolate.py  nnsearch.py  serialize.py  types.py
src/anguilla/app/: server.py
tests/: test_batch.py  test_embeddings.py  test_io.py  test_nnsearch.py  test_project_and_sort.py
