[tool.poetry]
name = "anguilla"
version = "0.1.0"
description = "a package for interactive machine learning"
authors = ["Victor Shepardson <victor.shepardson@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
numpy = "^1.23"
faiss-cpu = {version = "^1.7", optional = true}

[tool.poetry.extras]
faiss = ["faiss-cpu"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
mkdocs = "^1.5.3"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
mkdocs-gen-files = "^0.5.0"
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = "^9.4.8"
mkdocs-material-extensions = "^1.3"
mkdocs-autorefs = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
